style: fix home button spacing

--- a/src/components/HomeDescription/styles.css
+++ b/src/components/HomeDescription/styles.css
@@ -47,4 +47,5 @@
     text-align: center;
     color: #FFFFFF;
     font-weight: 900;
+    margin-top: 8%;
 }
